--- a/frontend/virtuafront/src/assets/base.css
+++ b/frontend/virtuafront/src/assets/base.css
@@ -61,8 +61,9 @@
 
 body {
   min-height: 100vh;
+  max-width: 100vw;
   color: var(--color-text);
-  background: var(--color-background);
+  
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   
