--- a/frontend/virtuafront/src/assets/main.css
+++ b/frontend/virtuafront/src/assets/main.css
@@ -1,11 +1,11 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+ 
   margin: 0 auto;
   padding: 2rem;
-
   font-weight: normal;
+  background: rgb(44, 36, 36);
 }
 
 a,
