--- a/frontend/virtuafront/src/assets/base.css
+++ b/frontend/virtuafront/src/assets/base.css
@@ -63,7 +63,8 @@ body {
   min-height: 100vh;
   max-width: 100vw;
   color: var(--color-text);
-  
+  justify-content: center;
+  align-items: center;
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   background: rgb(44, 36, 36);
